# crmscript_fetcher

./: .gitignore  CRMScript Fetcher.spec  LICENSE  TenantService.py  bridge.py  crmscript_fetcher.crmscript  data_creator.py  fetch.py  fetch_service.py  files_and_folders.py  gui.py  main.py  main.spec  pyproject.toml  readme.md  requirements.txt  tenant_service.py  tenant_settings.json  tenant_settings.py  utility.py
data_creation/: scheduled_tasks.py  screen_choosers.py  screens.py  scripts.py  tables.py  triggers.py
vue/: .prettierrc.json  README.md  index.html  index_eel.html  package-lock.json  package.json  vite.config.ts
vue/src/: App.vue  main.ts
vue/src/assets/: main.css
vue/src/components/: TenantForm.vue
vue/src/composables/: useEel.ts
vue/src/types/: FetchResult.ts  TenantSettings.ts
